--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "cypress": "9.5.0",
-    "pg": "^8.8.0"
+    "moment": "^2.29.4",
+    "pg": "^8.8.0",
+    "underscore": "^1.13.6"
   }
 }
