--- a/.github/workflows/chrome-ui-tests.yml
+++ b/.github/workflows/chrome-ui-tests.yml
@@ -6,9 +6,36 @@ on:
 jobs:
  chrome-ui-tests:
   runs-on: ubuntu-latest
-  
+  container: cypress/browsers:node12.18.3-chrome87-ff82
+  strategy:
+    fail-fast: false
+    matrix:
+      # run copies of the current job in parallel
+      containers: [1]
   steps:
-    - uses: actions/checkout@v3
-    
-    - name: List files project
-      run: ls -l
+    - name: Checkout
+      uses: actions/checkout@v3
+      
+    - name: Ping API
+      uses: Leocardoso94/is-my-site-up@v1.2
+      with:
+        site: https://samuraibs-api-amanda.fly.dev
+
+    - name: 'UI Tests - Chrome'
+      uses: cypress-io/github-action@v5.x.x # use the explicit version number
+      with:
+        # we have already installed all dependencies above
+        install-command: yarn install
+        wait-on: 'https://samuraibs-web-amanda.fly.dev'
+        wait-on-timeout: 120
+        browser: chrome
+        record: true
+        parallel: true
+        group: 'UI - Chrome'
+        spec: cypress/integration/*
+      env:
+        TZ: America/Sao_Paulo
+        CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+        # Recommended: pass the GitHub token lets this action correctly
+        # determine the unique run id necessary to re-run the checks
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
