--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Amanda Bertolai",
   "license": "MIT",
   "devDependencies": {
-    "@faker-js/faker": "^6.0.0",
+    "@faker-js/faker": "6.0.0-alpha.7",
     "cypress": "9.5.0",
     "moment": "^2.29.4",
     "pg": "^8.8.0",
