--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "devDependencies": {
     "@faker-js/faker": "6.0.0-alpha.7",
     "cypress": "9.5.0",
-    "moment": "^2.29.4",
-    "pg": "^8.8.0",
-    "underscore": "^1.13.6"
+    "moment": "2.29.4",
+    "pg": "8.8.0",
+    "underscore": "1.13.6"
   }
 }
