--- a/.github/workflows/chrome-ui-tests.yml
+++ b/.github/workflows/chrome-ui-tests.yml
@@ -6,7 +6,7 @@ on:
 jobs:
  chrome-ui-tests:
   runs-on: ubuntu-latest
-  container: cypress/browsers:node12.18.3-chrome87-ff82
+  container: cypress/browsers:node14.17.6-chrome100-ff98
   strategy:
     fail-fast: false
     matrix:
@@ -25,7 +25,7 @@ jobs:
       uses: cypress-io/github-action@v2 # use the explicit version number
       with:
         # we have already installed all dependencies above
-        install-command: yarn install --ignore-engines
+        install-command: yarn install
         wait-on: 'https://samuraibs-web-amanda.fly.dev'
         wait-on-timeout: 120
         browser: chrome
