--- a/.github/workflows/chrome-ui-tests.yml
+++ b/.github/workflows/chrome-ui-tests.yml
@@ -2,6 +2,10 @@ name: Chrome UI Tests
 
 on: 
   workflow_dispatch:
+    inputs:
+      specs:
+        description: 'Run ALL or unique spec'
+        default: cypress/integration/*
   
 jobs:
  chrome-ui-tests:
@@ -32,7 +36,7 @@ jobs:
         record: true
         parallel: true
         group: 'UI - Chrome'
-        spec: cypress/integration/*
+        spec: ${{ github.event.inputs.specs }}
       env:
         TZ: America/Sao_Paulo
         CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
